# stock-watch

./: README.md
Backend/: .gitignore
Backend/src/: main.py  requirements.txt
Backend/src/core/: config.py  database.py  dependencies.py  repository.py  scheduler.py
Backend/src/migrations/: env.py
Backend/src/migrations/versions/: 2025_05_05_1542-d41b6b5421c6_init.py  2025_05_08_2259-9f3f014e69b5_refresh_token.py  2025_05_08_2303-5249d9e7f566_refresh_token_2.py  2025_05_10_2239-27c19196ac59_fcm.py  2025_05_12_1906-ab72392f4b1b_onesignal_model.py  2025_05_17_1233-e26642c1b177_alert.py  2025_06_09_2301-5d7b0095a987_color.py
Backend/src/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
Backend/src/modules/news/: models.py  repository.py  schemas.py
Backend/src/modules/notify/: models.py  repository.py  router.py  schemas.py  service.py
MobileApp/: built_2_run_apk.bat  pyproject.toml
MobileApp/src/: main.py  requirements.txt
MobileApp/src/app/: config.py  router.py  setup.py
MobileApp/src/components/: asset_card.py  bottom_nav_bar.py  chart_interval_selector.py  spinner.py
MobileApp/src/pages/: asset_page.py  edit_asset_page.py  home_page.py  notifications_page.py  notify_asset_page.py  portfolio_page.py  transactions_page.py
MobileApp/src/pages/auth/: login_page.py  register_page.py
MobileApp/src/services/: api.py  auth_service.py  notify_service.py  onesignal_service.py  portfolio_service.py  price_history_service.py  token_storage.py
MobileApp/src/state/: session.py
MobileApp/src/theme/: colors.py
(+20 files in other folders)
